<resources>
    <string name="app_name">Zomato</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">288523881080</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="tag_line">Discover more places to eat around you</string>
    <string name="skip">Skip this step</string>
    <string name="email_login">Sign in</string>
    <string name="email_signup">Sign Up</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="or_use_email">Or use your email address</string>
    <string name="fb_button">Connect with Facebook</string>
    <string name="google_button">Connect with Google</string>
    <string name="detecting_location">Detecting location</string>
    <string name="detected_location">detected location</string>
    <string name="tip">Tip:</string>
    <string name="tip_text">Tip: Shake your phone to get recommendations in/around</string>
    <string name="location">LOCATION</string>
    <string name="explore">Explore</string>
    <string name="explore_caps">EXPLORE</string>
    <string name="search">SEARCH</string>
    <string name="search_header">Search</string>
    <string name="favorites">FAVS</string>
    <string name="wishlist">WISHLIST</string>
    <string name="profile">PROFILE</string>
    <string name="network">NETWORK</string>
    <string name="logo_tag_line">Discover more places to eat around you</string>
    <string name="featured">Featured:</string>
    <string name="explore_list">VIEW AS LIST</string>
    <string name="explore_map">VIEW AS MAP</string>
    <string name="explore_expand">Expand</string>
    <string name="recent">RECENT</string>
    <string name="presets">PRESETS</string>
    <string name="top25">TOP 25</string>
    <string name="address_caps">ADDRESS</string>
    <string name="cuisines">CUISINES</string>
    <string name="cost">Cost</string>
    <string name="cost_caps">COST</string>
    <string name="facilities">TAGS</string>
    <string name="cards">PAYMENT</string>
    <string name="taptorate">TAP TO RATE</string>
    <string name="call">CALL</string>
    <string name="timings">HOURS</string>
    <string name="writereview">WRITE A REVIEW</string>
    <string name="myrating">MY RATING</string>
    <string name="yourrating">YOUR RATING</string>
    <string name="your_review">Your Review</string>
    <string name="you">YOU</string>
    <string name="rating">RATING</string>
    <string name="rating_small">Rating:</string>
    <string name="yourrating_split">"YOUR
RATING"</string>
    <string name="submit">SUBMIT</string>
    <string name="f_or">for</string>
    <string name="close">CLOSE</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="post">POST</string>
    <string name="text_backtolists">BACK TO LISTS</string>
    <string name="text_backtonetwork">BACK TO NETWORK</string>
    <string name="text_callnow">CALL NOW</string>
    <string name="text_follows">FOLLOWING</string>
    <string name="text_followedby">FOLLOWED BY</string>
    <string name="text_wishlist">WISHLIST</string>
    <string name="text_beenthere">BEEN THERE</string>
    <string name="text_favorites">FAVORITES</string>
    <string name="text_ratings">RATINGS</string>
    <string name="text_reviews">REVIEWS</string>
    <string name="noactivity">No recent activity</string>
    <string name="cost_1">0 - 500</string>
    <string name="cost_2">500 - 1000</string>
    <string name="cost_3">1000 - 1500</string>
    <string name="cost_4">1500 +</string>
    <string name="costfortwo">COST FOR TWO</string>
    <string name="done">DONE</string>
    <string name="clearall">CLEAR ALL</string>
    <string name="km">KM</string>
    <string name="km10">10KM</string>
    <string name="km15">15KM</string>
    <string name="km20">20KM</string>
    <string name="km20plus">>20KM</string>
    <string name="localities">LOCALITIES</string>
    <string name="location_settings_title">LOCATION SETTINGS</string>
    <string name="profile_settings_title">PROFILE SETTINGS</string>
    <string name="login">Login to Zomato</string>
    <string name="city">City :</string>
    <string name="drafts">DRAFTS</string>
    <string name="drafts_small">Drafts</string>
    <string name="sound">Sound</string>
    <string name="notif">Push Notifications</string>
    <string name="notifications_header">Notifications</string>
    <string name="logout">Sign out</string>
    <string name="others_caps">OTHERS</string>
    <string name="share">Tell your friends about Zomato</string>
    <string name="rate">Rate us on the Play Store</string>
    <string name="activity">ACTIVITY</string>
    <string name="activity_small">Activity</string>
    <string name="cities">CITIES</string>
    <string name="loginsmall">Log in to Zomato</string>
    <string name="logincaps">LOGIN</string>
    <string name="joined">Joined</string>
    <string name="from">From</string>
    <string name="from_caps">FROM</string>
    <string name="SUCCESS">SUCCESS</string>
    <string name="ERROR">AN ERROR OCCURRED</string>
    <string name="attention">ATTENTION REQUIRED</string>
    <string name="back">BACK</string>
    <string name="filters">FILTER</string>
    <string name="hide">HIDE</string>
    <string name="directions">DIRECTIONS</string>
    <string name="transit">TRANSIT</string>
    <string name="happyhours">HAPPY HOURS</string>
    <string name="HappyHours">Happy Hours:</string>
    <string name="buffet">BUFFET</string>
    <string name="tips">TIPS</string>
    <string name="beer">BEER</string>
    <string name="stag">STAG ENTRY</string>
    <string name="entryfee">ENTRY FEE</string>
    <string name="report">REPORT</string>
    <string name="reporterror">REPORT ERROR</string>
    <string name="wrong">"WHAT'S WRONG"</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="other">Others</string>
    <string name="outlet_closed">Outlet Closed</string>
    <string name="placeholder_report">Tap here to give us some more details (Optional)</string>
    <string name="likes_text_singular">foodie found this review helpful. Do you?</string>
    <string name="likes_text_plural">foodies found this review helpful. Do you?</string>
    <string name="likes_text_nolikes">Do you find this review helpful ?</string>
    <string name="liked_text_single">You found this review helpful</string>
    <string name="liked_text_two">You and 1 other foodie found this review helpful</string>
    <string name="liked_text_multiple_1">You and</string>
    <string name="liked_text_multiple_2">others found this review helpful</string>
    <string name="likes_user_review_plural">foodies found this review helpful</string>
    <string name="likes_user_review_singular">foodie found this review helpful</string>
    <string name="yes">YES</string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="getting_city_list">Getting city list</string>
    <string name="identifying_location">Identifying location...</string>
    <string name="select_city_to_continue">Please select a city to continue</string>
    <string name="select_city">SELECT CITY</string>
    <string name="select_city_small">Select city</string>
    <string name="error_message">Unable to complete your request. Please try again later.</string>
    <string name="no_internet">Unable to connect to server. Please try again later</string>
    <string name="refresh">REFRESH</string>
    <string name="nearby_restaurants">"NEARBY
RESTAURANTS"</string>
    <string name="instant_recommendation">"INSTANT
RECOMMENDATION"</string>
    <string name="nearby_text">See a list of restaurants near you</string>
    <string name="nearby">Nearby</string>
    <string name="nearby_caps">NEARBY</string>
    <string name="search_results">Search Results</string>
    <string name="instant_text">Shuffle through random restaurants near you</string>
    <string name="explore_by">OR EXPLORE BY</string>
    <string name="custom_location">OTHER LOCATION</string>
    <string name="rated">Rated:</string>
    <string name="restaurant_no_menus">Menu not available for %1$s yet</string>
    <string name="restaurant_no_photos">No photos added for %1$s yet</string>
    <string name="restaurant_no_reviews">No reviews written for %1$s yet</string>
    <string name="restaurant_no_map">Map not available for %1$s yet</string>
    <string name="yet">yet</string>
    <string name="search_hint">Search by keyword...</string>
    <string name="search_tip">Search by name, location or cuisine</string>
    <string name="search_tip_dish">Search by name, location, cuisine or dish</string>
    <string name="search_tip_dish_postcode">Search by name, location, cuisine, dish or postcode</string>
    <string name="search_tip_postcode">Search by name, location, cuisine or postcode</string>
    <string name="search_tip_london">Tip: You can search by name, locality/postcode, cuisine or dish</string>
    <string name="main_nevermind">NEVERMIND</string>
    <string name="verify_email">You need to verify your email to proceed</string>
    <string name="login_signup">SIGN IN or SIGN UP</string>
    <string name="to_get_the_most">to get the most out of zomato</string>
    <string name="verify_your_email">verify your email</string>
    <string name="resend_email">Resend email</string>
    <string name="enter_verification_code">Please enter the verification code received in your email</string>
    <string name="or">Or</string>
</resources>